<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60000000" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/tip_textbox"
        android:textColor="#ffffff"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="90dp"
        android:text="@string/tip_meterbar"
        android:textSize="10dp" 
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:text="@string/tip_yesno"
        android:textSize="10dp"
        android:textColor="#ffffff" />

    <ImageButton
        android:id="@+id/go_left"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/next_left" />

</RelativeLayout>