<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.google.android.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="0PGmnrCR70lqJW1mfG8EdjuvkpAOn00O-6Pisnw"
        android:clickable="true" />
    <!--android:apiKey="0wm7R8QAi85B9rJsVUD7axKcDQqAuL2_Bt6XIJw"  with certificate-->

    <LinearLayout
        android:id="@+id/findmebuttonlayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/findme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/findme"
            android:textSize="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoPannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/submenu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center" >

                <AutoCompleteTextView
                    android:id="@+id/adressbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="70"
                    android:ems="10"
                    android:hint="@string/dirHint"
                    android:singleLine="true"
                    android:text="AutoCompleteTextView" >

                    <requestFocus />
                </AutoCompleteTextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/textlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meters" />

                <TextView
                    android:id="@+id/meterbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="300" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/meterbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/mseekbar"
                    android:max="4200"
                    android:progress="1200"
                    android:progressDrawable="@drawable/mseekbar"
                    android:thumb="@drawable/thumbmbar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right" >

            <Button
                android:id="@+id/yesb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/icon" />

            <Button
                android:id="@+id/nob"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_stop" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialogPannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible" >

        <FrameLayout
            android:id="@+id/txtcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/square" >

            <TextView
                android:id="@+id/infoTextP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/remove"
                android:textSize="20dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right" >

            <CheckBox
                android:id="@+id/checkBoxGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:checked="false"
                android:text="@string/noshow"
                android:textColor="#45a3c6" />

            <Button
                android:id="@+id/removeYes"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/icon" />

            <Button
                android:id="@+id/removeNo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_stop" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alarm_title" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_title" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/adviser_title" />

            <TextView
                android:id="@+id/loadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/servLoad"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/admobFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>

</FrameLayout>